--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laurence Smith - About Page</title>
     <link rel="shortcut icon" href="favicon_io/android-chrome-512x512.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Hegarty&display=swap" rel="stylesheet">
@@ -45,7 +45,7 @@ I get excited about building intricate character controllers and interconnected 
         </p>
         <a href="https://www.linkedin.com/in/laurence-s-12808b90/" target="_blank" class="button__secondary">LinkedIn</a>
         <br>
-        <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="city-illustration" height="auto" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <!-- <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="city-illustration" height="auto" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
             <polygon id="a" points=".06 231.917 .06 .929 688.717 .929 688.717 231.917"></polygon>
         </defs>
@@ -643,9 +643,8 @@ I get excited about building intricate character controllers and interconnected 
             </g>
             <path fill="#1A232C" d="M55.253 470.489L55.253 410.403C55.253 409.85 54.805 409.403 54.253 409.403 53.701 409.403 53.253 409.85 53.253 410.403L53.253 470.489C53.253 471.041 53.701 471.489 54.253 471.489 54.805 471.489 55.253 471.041 55.253 470.489M50.889 340.95L65.312 340.95C65.865 340.95 66.312 340.502 66.312 339.95 66.312 339.397 65.865 338.95 65.312 338.95L50.889 338.95C50.336 338.95 49.889 339.397 49.889 339.95 49.889 340.502 50.336 340.95 50.889 340.95"></path>
         </g>
-    </svg>
+    </svg> -->
         <table>
-            <br>
             <thead>
                 <tr>
                     <th>Skills</th>
@@ -676,13 +675,20 @@ I get excited about building intricate character controllers and interconnected 
     <footer class="page-footer">
         <div class="social-media">
             <img src="img/211904_social_github_icon.svg" alt="Github">
-            <img src="img/5296501_linkedin_network_linkedin logo_icon.svg" alt="LinkedIn">
+            <img src="img/5296501_linkedin_network_linkedin_logo_icon.svg" alt="LinkedIn">
             <img src="img/8546804_itch_io_icon.svg" alt="Itch.io">
             <br>
             <p><a href="#">Back to top</a></p>
         </div>
     </footer>
     <script src="js/tota11y.min.js"></script>
+    <p>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
+</p>
 </body>
 
 </html>
