--- a/work.html
+++ b/work.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laurence Smith - Work page</title>
     <link rel="shortcut icon" href="favicon_io/android-chrome-512x512.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Hegarty&display=swap" rel="stylesheet">
@@ -39,7 +39,7 @@
 <section>
     <h1>Work</h1>
     <div class="grid"> 
-        <div class= "grid__item">
+        <!-- <div class= "grid__item">
             <h3>Project One</h3>
             <img src="https://placehold.co/200x150" alt="Project One Screenshot">
             <p>This is a description of Project One. It is a web application that allows users to track their tasks efficiently.</p>
@@ -74,7 +74,7 @@
             <img src="https://placehold.co/200x150" alt="Project One Screenshot">
             <p>This is a description of Project One. It is a web application that allows users to track their tasks efficiently.</p>
             <a href="#">View Project</a>
-        </div>
+        </div> -->
     </div>
 </section>
 
@@ -82,13 +82,20 @@
         <p>Find me on</p>
         <div class="social-media">
             <img src="img/211904_social_github_icon.svg" alt="Github">
-            <img src="img/5296501_linkedin_network_linkedin logo_icon.svg" alt="LinkedIn">
+            <img src="img/5296501_linkedin_network_linkedin_logo_icon.svg" alt="LinkedIn">
             <img src="img/8546804_itch_io_icon.svg" alt="Itch.io">
             <br>
             <p><a href="#">Back to top</a></p>
         </div>  
     </footer>
     <script src="js/tota11y.min.js"></script>
+    <p>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
+</p>
 </body>
    
 
