Add social media links and game portfolio section
Wrapped social media icons in anchor tags for GitHub, LinkedIn, and Itch.io across all pages for improved accessibility. Added a new Game Programming Portfolio section to work.html with a thumbnail image and external link. Included GameProg-Portfolio_Thumbnail.png asset.

--- a/contact.html
+++ b/contact.html
@@ -81,9 +81,15 @@
     <footer class="page-footer">
         <p>Find me on</p>
         <div class="social-media">
+            <a href=" https://github.com/L-Smith-E" target="_blank">
             <img src="img/211904_social_github_icon.svg" alt="Github">
+            </a>
+            <a href="https://www.linkedin.com/in/laurence-smith-2b4b621b2/" target="_blank">
             <img src="img/5296501_linkedin_network_linkedin_logo_icon.svg" alt="LinkedIn">
+            </a>
+            <a href="https://lsmith-e.itch.io/" target="_blank">
             <img src="img/8546804_itch_io_icon.svg" alt="Itch.io">
+            </a>
             <br>
             <p><a href="#">Back to top</a></p>
         </div>
