--- a/work.html
+++ b/work.html
@@ -39,13 +39,13 @@
 <section>
     <h1>Work</h1>
     <div class="grid"> 
-        <!-- <div class= "grid__item">
-            <h3>Project One</h3>
-            <img src="https://placehold.co/200x150" alt="Project One Screenshot">
-            <p>This is a description of Project One. It is a web application that allows users to track their tasks efficiently.</p>
-            <a href="#">View Project</a>
-        </div>
         <div class= "grid__item">
+            <h3>Game Dev Portfolio</h3>
+            <img src="img/GameProg-Portfolio_Thumbnail.png" alt="GameProgramming" width="300" >
+            <p>Take a look at my background in Game Programming</p>
+            <a href="https://l-smith-e.github.io/L-Smith-E/" target="_blank">View Portfolio</a>
+        </div>
+        <!-- <div class= "grid__item">
             <h3>Project One</h3>
             <img src="https://placehold.co/200x150" alt="Project One Screenshot">
             <p>This is a description of Project One. It is a web application that allows users to track their tasks efficiently.</p>
@@ -81,9 +81,15 @@
     <footer class="page-footer">
         <p>Find me on</p>
         <div class="social-media">
+            <a href=" https://github.com/L-Smith-E" target="_blank">
             <img src="img/211904_social_github_icon.svg" alt="Github">
+            </a>
+            <a href="https://www.linkedin.com/in/laurence-smith-2b4b621b2/" target="_blank">
             <img src="img/5296501_linkedin_network_linkedin_logo_icon.svg" alt="LinkedIn">
+            </a>
+            <a href="https://lsmith-e.itch.io/" target="_blank">
             <img src="img/8546804_itch_io_icon.svg" alt="Itch.io">
+            </a>
             <br>
             <p><a href="#">Back to top</a></p>
         </div>  
