--- a/about.html
+++ b/about.html
@@ -674,9 +674,15 @@ I get excited about building intricate character controllers and interconnected 
     </main>
     <footer class="page-footer">
         <div class="social-media">
+            <a href=" https://github.com/L-Smith-E" target="_blank">
             <img src="img/211904_social_github_icon.svg" alt="Github">
+            </a>
+            <a href="https://www.linkedin.com/in/laurence-smith-2b4b621b2/" target="_blank">
             <img src="img/5296501_linkedin_network_linkedin_logo_icon.svg" alt="LinkedIn">
+            </a>
+            <a href="https://lsmith-e.itch.io/" target="_blank">
             <img src="img/8546804_itch_io_icon.svg" alt="Itch.io">
+            </a>
             <br>
             <p><a href="#">Back to top</a></p>
         </div>
