Update font to Oswald and revise work projects
Changed site font to Oswald in HTML and CSS for improved consistency and readability. Updated work.html to list specific project types (Angular, React Native, React, Web App, Python App, MongoDB API) instead of generic placeholders, and removed unused image and description elements for a cleaner layout.

--- a/work.html
+++ b/work.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="favicon_io/android-chrome-512x512.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" >
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Hegarty&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Hegarty&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     
 </head>
@@ -45,36 +45,42 @@
             <p>Take a look at my background in Game Programming</p>
             <a href="https://l-smith-e.github.io/L-Smith-E/" target="_blank">View Portfolio</a>
         </div>
-        <!-- <div class= "grid__item">
-            <h3>Project One</h3>
-            <img src="https://placehold.co/200x150" alt="Project One Screenshot">
-            <p>This is a description of Project One. It is a web application that allows users to track their tasks efficiently.</p>
+        <div class= "grid__item">
+            <h3>Angular App</h3>
+            <!-- <img src="https://placehold.co/200x150" alt="Project One Screenshot"> -->
+            <!-- <p>This is a description of Project One. It is a web application that allows users to track their tasks efficiently.</p> -->
             <a href="#">View Project</a>
         </div>
         <div class= "grid__item">
-            <h3>Project One</h3>
-            <img src="https://placehold.co/200x150" alt="Project One Screenshot">
-            <p>This is a description of Project One. It is a web application that allows users to track their tasks efficiently.</p>
+            <h3>React Native App</h3>
+            <!-- <img src="https://placehold.co/200x150" alt="Project One Screenshot"> -->
+            <!-- <p>This is a description of Project One. It is a web application that allows users to track their tasks efficiently.</p> -->
             <a href="#">View Project</a>
         </div>
         <div class= "grid__item">
-            <h3>Project One</h3>
-            <img src="https://placehold.co/200x150" alt="Project One Screenshot">
-            <p>This is a description of Project One. It is a web application that allows users to track their tasks efficiently.</p>
+            <h3>React App</h3>
+            <!-- <img src="https://placehold.co/200x150" alt="Project One Screenshot"> -->
+            <!-- <p>This is a description of Project One. It is a web application that allows users to track their tasks efficiently.</p> -->
             <a href="#">View Project</a>
         </div>
         <div class= "grid__item">
-            <h3>Project One</h3>
-            <img src="https://placehold.co/200x150" alt="Project One Screenshot">
-            <p>This is a description of Project One. It is a web application that allows users to track their tasks efficiently.</p>
+            <h3>Web App</h3>
+            <!-- <img src="https://placehold.co/200x150" alt="Project One Screenshot"> -->
+            <!-- <p>This is a description of Project One. It is a web application that allows users to track their tasks efficiently.</p> -->
             <a href="#">View Project</a>
         </div>
         <div class= "grid__item">
-            <h3>Project One</h3>
-            <img src="https://placehold.co/200x150" alt="Project One Screenshot">
-            <p>This is a description of Project One. It is a web application that allows users to track their tasks efficiently.</p>
+            <h3>Python App</h3>
+            <!-- <img src="https://placehold.co/200x150" alt="Project One Screenshot"> -->
+            <!-- <p>This is a description of Project One. It is a web application that allows users to track their tasks efficiently.</p> -->
             <a href="#">View Project</a>
-        </div> -->
+        </div>
+        <div class= "grid__item">
+            <h3>MongoDB API</h3>
+            <!-- <img src="https://placehold.co/200x150" alt="Project One Screenshot"> -->
+            <!-- <p>This is a description of Project One. It is a web application that allows users to track their tasks efficiently.</p> -->
+            <a href="#">View Project</a>
+        </div>
     </div>
 </section>
 
